# nhentai_tools

./: .gitignore  LICENSE.md  README.md  pyproject.toml  setup.py
nhentai_tools/: __init__.py  downloading.py  exceptions.py  extraction.py  metadata.py  nhentai_tools.py  utils.py
tests/: test_nhentai_tools.py
